# luna

./: .gitignore  ADVANCED_FEATURES_ROADMAP.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  PRODUCTION_STATUS.md  README.md  UNIFIED_DOCUMENTATION.md  conversation.json  prompt.md  tasklist.md
config/: brain_patterns.yaml  default.toml
docs/: DEPLOYMENT_GUIDE.md  EXAMPLE_COMMANDS.md  KNOWLEDGE_SYSTEM.md  MASTER-PROMPT.md  OS_INTEGRATION_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  README-PROMPTS.md  architecture-diagram.md  brief.md  improvement-implementation-guide.md  prompt-part1-foundation.md  prompt-part2-audio.md  prompt-part3-brain.md  prompt-part4-actions.md  prompt-part5-os-integration.md  prompt-part6-tts-context.md  prompt-part7-integration.md  prompt-summary.md
examples/: knowledge_demo.rs  os_integration_demo.rs  phase6_tts_context_demo.rs
logs/: luna.log.2025-11-02  luna.log.2025-11-04  luna.log.2025-11-05
models/: .gitkeep
src/: cli.rs  config.rs  config_manager.rs  error.rs  events.rs  lib.rs  main.rs  metrics.rs  runtime.rs  subscribers.rs  utils.rs
src/actions/: app_launcher.rs  capabilities.rs  clipboard.rs  executor.rs  file_operations.rs  file_search.rs  media_control.rs  mod.rs  question_handler.rs  reminders.rs  system_control.rs  window_control.rs
src/audio/: capture.rs  capture_new.rs  device.rs  dsp.rs  mocks.rs  mod.rs  processor.rs  ring_buffer.rs  speech_to_text.rs  traits.rs  vad.rs  wake_word.rs
src/brain/: cache.rs  command_parser.rs  context_resolver.rs  contextualizer.rs  entity_extractor.rs  grammar.rs  intent_classifier.rs  mod.rs  multi_intent.rs  nlp.rs  providers.rs  ranking.rs  task_planner.rs  types.rs
src/context/: memory.rs  mod.rs  state.rs  unified.rs
src/db/: app_database.rs  file_index.rs  mod.rs  schema.rs
src/knowledge/: graph.rs  mod.rs  question_answering.rs  weather.rs  web_search.rs  wikipedia.rs
src/os/: app_watcher.rs  automation.rs  clipboard_manager.rs  common.rs  desktop_environment.rs  discovery.rs  health_monitor.rs  linux.rs  macos.rs  mod.rs  multi_monitor.rs  performance_optimizer.rs  power_manager.rs  process_manager.rs  process_priority.rs  resource_monitor.rs  smart_app_index.rs  unified_manager.rs  virtual_desktop.rs  window_manager.rs  windows.rs
src/tts/: engine.rs  mod.rs  queue.rs  ssml.rs  synthesizer.rs  types.rs
tests/: integration_tests.rs  new_features_integration.rs
